--- a/Project_2/public/table-data-table.html
+++ b/Project_2/public/table-data-table.html
@@ -24,7 +24,7 @@
   </head>
   <body class="app sidebar-mini rtl">
     <!-- Navbar-->
-    <header class="app-header"><a class="app-header__logo" href="index.html">Group 16</a>
+    <header class="app-header"><a class="app-header__logo" href="/">Group 16</a>
       <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"></a>
       <!-- Navbar Right Menu-->
       <ul class="app-nav">
