adding form for handling post requests

--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -52,4 +52,7 @@
                       <p class="app-notification__message">Transaction complete</p>
                       <p class="app-notification__meta">2 days ago</p>
                     </div></a></li>
-              
+              </div>
+            </div>
+            <li class="app-notification__footer"><a href="#">See all notifications.</a></li>
+          </ul>
