adding form for handling post requests

--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -76,3 +76,5 @@
           <p class="app-sidebar__user-designation">Frontend Developer</p>
         </div>
       </div>
+      <ul class="app-menu">
+       <li><a class="app-menu__item" href="index.html"><i class="app-menu__icon fa
