--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -77,4 +77,5 @@
         </div>
       </div>
       <ul class="app-menu">
-       <li><a class="app-menu__item" href="index.html"><i class="app-menu__icon fa
+       <li><a class="app-menu__item" href="index.html"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Dashboard</span></a></li>
+        <li><a class="app-menu__item" href="table-data-table.html"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Find Project
