--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -78,4 +78,8 @@
       </div>
       <ul class="app-menu">
        <li><a class="app-menu__item" href="index.html"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Dashboard</span></a></li>
-        <li><a class="app-menu__item" href="table-data-table.html"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Find Project
+        <li><a class="app-menu__item" href="table-data-table.html"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Find Project</span></a></li>
+        <li><a class="app-menu__item" href="page-user.html"><i class="app-menu__icon fa fa-user"></i><span class="app-menu__label">My Profile</span></a></li> 
+      </ul>
+    </aside>
+    
