--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -82,4 +82,9 @@
         <li><a class="app-menu__item" href="page-user.html"><i class="app-menu__icon fa fa-user"></i><span class="app-menu__label">My Profile</span></a></li> 
       </ul>
     </aside>
-    
+    <main class="app-content">
+      <div class="app-title">
+        <div>
+          <h1><i class="fa fa-edit"></i>Sign-up from</h1>
+          <p>Sign-up form</p>
+        
