--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -91,4 +91,8 @@
         <ul class="app-breadcrumb breadcrumb">
           <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
           <li class="breadcrumb-item">Forms</li>
-        
+          <li class="breadcrumb-item"><a href="#">Sign-up form</a></li>
+        </ul>
+      </div>
+      <div class="row">
+        <div cla
