adding form for handling post requests

--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -96,4 +96,5 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <di
+          <div class="tile">
+            <h
