--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -97,4 +97,4 @@
       <div class="row">
         <div class="col-md-6">
           <div class="tile">
-            <h
+            <h3 class="tile-title">Goi
