--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -98,4 +98,6 @@
         <div class="col-md-6">
           <div class="tile">
             <h3 class="tile-title">Going the project</h3>
-            <div class="tile-body"
+            <div class="tile-body">
+              <form>
+                <div class="for
