adding form for handling post requests

--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -100,4 +100,5 @@
             <h3 class="tile-title">Going the project</h3>
             <div class="tile-body">
               <form>
-                <div class="for
+                <div class="form-group">
+                  
