adding form for handling post requests

--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -101,4 +101,4 @@
             <div class="tile-body">
               <form>
                 <div class="form-group">
-                  
+                  <label class="control-label">Name</label>
