--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -102,3 +102,4 @@
               <form>
                 <div class="form-group">
                   <label class="control-label">Name</label>
+                  <input class="form-control" type="text" pl
