--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -102,4 +102,6 @@
               <form>
                 <div class="form-group">
                   <label class="control-label">Name</label>
-                  <input class="form-control" type="text" pl
+                  <input class="form-control" type="text" placeholder="Enter full name">
+                </div>
+        
