--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -104,4 +104,5 @@
                   <label class="control-label">Name</label>
                   <input class="form-control" type="text" placeholder="Enter full name">
                 </div>
-        
+                <div class="form-group">
+                  <label c
