--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -105,4 +105,5 @@
                   <input class="form-control" type="text" placeholder="Enter full name">
                 </div>
                 <div class="form-group">
-                  <label c
+                  <label class="control-label">Email</label>
+                
