--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -106,4 +106,4 @@
                 </div>
                 <div class="form-group">
                   <label class="control-label">Email</label>
-                
+                  <input class="form-control" type="email" placeholder="E
