--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -106,4 +106,6 @@
                 </div>
                 <div class="form-group">
                   <label class="control-label">Email</label>
-                  <input class="form-control" type="email" placeholder="E
+                  <input class="form-control" type="email" placeholder="Enter email address">
+                </div>
+                <div class="form-grou
