--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -108,4 +108,6 @@
                   <label class="control-label">Email</label>
                   <input class="form-control" type="email" placeholder="Enter email address">
                 </div>
-                <div class="form-grou
+                <div class="form-group">
+                  <label class="control-label">Address</label>
+                  
