--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -110,4 +110,6 @@
                 </div>
                 <div class="form-group">
                   <label class="control-label">Address</label>
-                  <textarea class="form-control" rows="4" p
+                  <textarea class="form-control" rows="4" placeholder="Enter your address"></textarea>
+                </div>
+                
