--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -112,4 +112,6 @@
                   <label class="control-label">Address</label>
                   <textarea class="form-control" rows="4" placeholder="Enter your address"></textarea>
                 </div>
-                
+                <div class="form-group">
+                  <label class="control-label">Gender</label>
+                  
