--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -114,4 +114,5 @@
                 </div>
                 <div class="form-group">
                   <label class="control-label">Gender</label>
-                  
+                  <div class="form-check">
+                    <label class="form-check-la
