adding form for handling post requests

--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -115,4 +115,5 @@
                 <div class="form-group">
                   <label class="control-label">Gender</label>
                   <div class="form-check">
-                    <label class="form-check-la
+                    <label class="form-check-label">
+                      <input class="form-check-input"
