adding form for handling post requests

--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -116,4 +116,7 @@
                   <label class="control-label">Gender</label>
                   <div class="form-check">
                     <label class="form-check-label">
-                      <input class="form-check-input"
+                      <input class="form-check-input" type="radio" name="gender">Male
+                    </label>
+                  </div>
+            
