--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -119,4 +119,6 @@
                       <input class="form-check-input" type="radio" name="gender">Male
                     </label>
                   </div>
-            
+                  <div class="form-check">
+                    <label class="form-check-label">
+                      <input cl
