--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -121,4 +121,4 @@
                   </div>
                   <div class="form-check">
                     <label class="form-check-label">
-                      <input cl
+                      <input class="form-check-input" type="radio" name="gender">Fem
