adding form for handling post requests

--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -121,4 +121,7 @@
                   </div>
                   <div class="form-check">
                     <label class="form-check-label">
-                      <input class="form-check-input" type="radio" name="gender">Fem
+                      <input class="form-check-input" type="radio" name="gender">Female
+                    </label>
+                  </div>
+              
