--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -124,4 +124,6 @@
                       <input class="form-check-input" type="radio" name="gender">Female
                     </label>
                   </div>
+                </div>
+                <div class="form-group">
               
