--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -126,4 +126,5 @@
                   </div>
                 </div>
                 <div class="form-group">
-              
+                  <label class="control-label">Identity Proof</label>
+                  <input class="form-control" type=
