adding form for handling post requests

--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -127,4 +127,6 @@
                 </div>
                 <div class="form-group">
                   <label class="control-label">Identity Proof</label>
-                  <input class="form-control" type=
+                  <input class="form-control" type="file">
+                </div>
+                <div class="fo
