adding form for handling post requests

--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -129,4 +129,5 @@
                   <label class="control-label">Identity Proof</label>
                   <input class="form-control" type="file">
                 </div>
-                <div class="fo
+                <div class="form-group">
+                  <div class="form-chec
