adding form for handling post requests

--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -130,4 +130,5 @@
                   <input class="form-control" type="file">
                 </div>
                 <div class="form-group">
-                  <div class="form-chec
+                  <div class="form-check">
+                    <label class="form-check-labe
