--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -131,4 +131,11 @@
                 </div>
                 <div class="form-group">
                   <div class="form-check">
-                    <label class="form-check-labe
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="checkbox">I accept the terms and conditions
+                    </label>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <div class="ti
