--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -146,4 +146,6 @@
         </div>
       </div>
     </main>
-    <!-- Essential javascripts
+    <!-- Essential javascripts for application to work-->
+    <script src="js/jquery-3.2.1.min.js"></script>
+  
