--- a/Project_2/public/enterNewProject.html
+++ b/Project_2/public/enterNewProject.html
@@ -150,4 +150,6 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src
+    <script src="js/main.js"></script>
+    <!-- The javascript plugin to display page loading on top-->
+    
