Trying to push favicon again

--- a/Project_2/public/page-login.html
+++ b/Project_2/public/page-login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <!-- Font-icon css-->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/jpg" href="images/favicon.ico">
     <title>Login - Group 16</title>
   </head>
   <body>
